@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2013 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -14,6 +14,9 @@
 
 package com.liferay.portal.action;
 
+import com.liferay.petra.string.CharPool;
+import com.liferay.petra.string.StringBundler;
+import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.json.JSONArray;
 import com.liferay.portal.kernel.json.JSONException;
 import com.liferay.portal.kernel.json.JSONFactoryUtil;
@@ -22,27 +25,26 @@ import com.liferay.portal.kernel.json.JSONSerializable;
 import com.liferay.portal.kernel.json.JSONSerializer;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
+import com.liferay.portal.kernel.security.access.control.AccessControlThreadLocal;
+import com.liferay.portal.kernel.service.ServiceContext;
+import com.liferay.portal.kernel.service.ServiceContextUtil;
 import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.ClassUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
+import com.liferay.portal.kernel.util.LocaleUtil;
 import com.liferay.portal.kernel.util.LocalizationUtil;
 import com.liferay.portal.kernel.util.ParamUtil;
 import com.liferay.portal.kernel.util.SetUtil;
-import com.liferay.portal.kernel.util.StringBundler;
-import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.security.ac.AccessControlThreadLocal;
-import com.liferay.portal.service.ServiceContext;
-import com.liferay.portal.service.ServiceContextUtil;
 import com.liferay.portal.struts.JSONAction;
-import com.liferay.portal.util.ClassLoaderUtil;
 import com.liferay.portal.util.PropsValues;
 
 import java.lang.reflect.Method;
 import java.lang.reflect.Type;
 
 import java.util.Arrays;
+import java.util.Calendar;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
@@ -52,9 +54,6 @@ import java.util.regex.Pattern;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-
-import org.apache.struts.action.ActionForm;
-import org.apache.struts.action.ActionMapping;
 
 /**
  * @author Brian Wing Shun Chan
@@ -84,24 +83,27 @@ public class JSONServiceAction extends JSONAction {
 
 	@Override
 	public String getJSON(
-			ActionMapping actionMapping, ActionForm actionForm,
-			HttpServletRequest request, HttpServletResponse response)
+			HttpServletRequest httpServletRequest,
+			HttpServletResponse httpServletResponse)
 		throws Exception {
 
-		String className = ParamUtil.getString(request, "serviceClassName");
-		String methodName = ParamUtil.getString(request, "serviceMethodName");
+		String className = ParamUtil.getString(
+			httpServletRequest, "serviceClassName");
+		String methodName = ParamUtil.getString(
+			httpServletRequest, "serviceMethodName");
 
 		String[] serviceParameters = getStringArrayFromJSON(
-			request, "serviceParameters");
+			httpServletRequest, "serviceParameters");
 		String[] serviceParameterTypes = getStringArrayFromJSON(
-			request, "serviceParameterTypes");
+			httpServletRequest, "serviceParameterTypes");
 
-		if (!isValidRequest(request)) {
+		if (!isValidRequest(httpServletRequest)) {
 			return null;
 		}
 
-		ClassLoader contextClassLoader =
-			ClassLoaderUtil.getContextClassLoader();
+		Thread currentThread = Thread.currentThread();
+
+		ClassLoader contextClassLoader = currentThread.getContextClassLoader();
 
 		Class<?> clazz = contextClassLoader.loadClass(className);
 
@@ -113,63 +115,65 @@ public class JSONServiceAction extends JSONAction {
 		}
 
 		Method method = (Method)methodAndParameterTypes[0];
+
 		Type[] parameterTypes = (Type[])methodAndParameterTypes[1];
 		Object[] args = new Object[serviceParameters.length];
 
 		for (int i = 0; i < serviceParameters.length; i++) {
 			args[i] = getArgValue(
-				request, clazz, methodName, serviceParameters[i],
+				httpServletRequest, clazz, methodName, serviceParameters[i],
 				parameterTypes[i]);
 		}
 
 		try {
 			if (_log.isDebugEnabled()) {
 				_log.debug(
-					"Invoking " + clazz + " on method " + method.getName() +
-						" with args " + Arrays.toString(args));
+					StringBundler.concat(
+						"Invoking ", clazz, " on method ", method.getName(),
+						" with args ", Arrays.toString(args)));
 			}
 
-			Object returnObj = null;
+			Object returnObject = null;
 
 			boolean remoteAccess = AccessControlThreadLocal.isRemoteAccess();
 
 			try {
 				AccessControlThreadLocal.setRemoteAccess(true);
 
-				returnObj = method.invoke(clazz, args);
+				returnObject = method.invoke(clazz, args);
 			}
 			finally {
 				AccessControlThreadLocal.setRemoteAccess(remoteAccess);
 			}
 
-			if (returnObj != null) {
-				return getReturnValue(returnObj);
-			}
-			else {
-				return JSONFactoryUtil.getNullJSON();
-			}
-		}
-		catch (Exception e) {
-			if (_log.isDebugEnabled()) {
-				_log.debug(
-					"Invoked " + clazz + " on method " + method.getName() +
-						" with args " + Arrays.toString(args),
-					e);
+			if (returnObject != null) {
+				return getReturnValue(returnObject);
 			}
 
-			return JSONFactoryUtil.serializeException(e);
+			return JSONFactoryUtil.getNullJSON();
+		}
+		catch (Exception exception) {
+			if (_log.isDebugEnabled()) {
+				_log.debug(
+					StringBundler.concat(
+						"Invoked ", clazz, " on method ", method.getName(),
+						" with args ", Arrays.toString(args)),
+					exception);
+			}
+
+			return JSONFactoryUtil.serializeThrowable(exception);
 		}
 	}
 
 	protected Object getArgValue(
-			HttpServletRequest request, Class<?> clazz, String methodName,
-			String parameter, Type parameterType)
+			HttpServletRequest httpServletRequest, Class<?> clazz,
+			String methodName, String parameter, Type parameterType)
 		throws Exception {
 
 		String typeNameOrClassDescriptor = getTypeNameOrClassDescriptor(
 			parameterType);
 
-		String value = ParamUtil.getString(request, parameter);
+		String value = ParamUtil.getString(httpServletRequest, parameter);
 
 		if (Validator.isNull(value) &&
 			!typeNameOrClassDescriptor.equals("[Ljava.lang.String;")) {
@@ -179,30 +183,43 @@ public class JSONServiceAction extends JSONAction {
 		else if (typeNameOrClassDescriptor.equals("boolean") ||
 				 typeNameOrClassDescriptor.equals(Boolean.class.getName())) {
 
-			return Boolean.valueOf(ParamUtil.getBoolean(request, parameter));
+			return Boolean.valueOf(
+				ParamUtil.getBoolean(httpServletRequest, parameter));
 		}
 		else if (typeNameOrClassDescriptor.equals("double") ||
 				 typeNameOrClassDescriptor.equals(Double.class.getName())) {
 
-			return new Double(ParamUtil.getDouble(request, parameter));
+			return Double.valueOf(
+				ParamUtil.getDouble(httpServletRequest, parameter));
 		}
 		else if (typeNameOrClassDescriptor.equals("int") ||
 				 typeNameOrClassDescriptor.equals(Integer.class.getName())) {
 
-			return new Integer(ParamUtil.getInteger(request, parameter));
+			return Integer.valueOf(
+				ParamUtil.getInteger(httpServletRequest, parameter));
 		}
 		else if (typeNameOrClassDescriptor.equals("long") ||
 				 typeNameOrClassDescriptor.equals(Long.class.getName())) {
 
-			return new Long(ParamUtil.getLong(request, parameter));
+			return Long.valueOf(
+				ParamUtil.getLong(httpServletRequest, parameter));
 		}
 		else if (typeNameOrClassDescriptor.equals("short") ||
 				 typeNameOrClassDescriptor.equals(Short.class.getName())) {
 
-			return new Short(ParamUtil.getShort(request, parameter));
+			return Short.valueOf(
+				ParamUtil.getShort(httpServletRequest, parameter));
+		}
+		else if (typeNameOrClassDescriptor.equals(Calendar.class.getName())) {
+			Calendar cal = Calendar.getInstance(LocaleUtil.getDefault());
+
+			cal.setTimeInMillis(
+				ParamUtil.getLong(httpServletRequest, parameter));
+
+			return cal;
 		}
 		else if (typeNameOrClassDescriptor.equals(Date.class.getName())) {
-			return new Date(ParamUtil.getLong(request, parameter));
+			return new Date(ParamUtil.getLong(httpServletRequest, parameter));
 		}
 		else if (typeNameOrClassDescriptor.equals(
 					ServiceContext.class.getName())) {
@@ -217,28 +234,28 @@ public class JSONServiceAction extends JSONAction {
 			return value;
 		}
 		else if (typeNameOrClassDescriptor.equals("[Z")) {
-			return ParamUtil.getBooleanValues(request, parameter);
+			return ParamUtil.getBooleanValues(httpServletRequest, parameter);
 		}
 		else if (typeNameOrClassDescriptor.equals("[D")) {
-			return ParamUtil.getDoubleValues(request, parameter);
+			return ParamUtil.getDoubleValues(httpServletRequest, parameter);
 		}
 		else if (typeNameOrClassDescriptor.equals("[F")) {
-			return ParamUtil.getFloatValues(request, parameter);
+			return ParamUtil.getFloatValues(httpServletRequest, parameter);
 		}
 		else if (typeNameOrClassDescriptor.equals("[I")) {
-			return ParamUtil.getIntegerValues(request, parameter);
+			return ParamUtil.getIntegerValues(httpServletRequest, parameter);
 		}
 		else if (typeNameOrClassDescriptor.equals("[J")) {
-			return ParamUtil.getLongValues(request, parameter);
+			return ParamUtil.getLongValues(httpServletRequest, parameter);
 		}
 		else if (typeNameOrClassDescriptor.equals("[S")) {
-			return ParamUtil.getShortValues(request, parameter);
+			return ParamUtil.getShortValues(httpServletRequest, parameter);
 		}
 		else if (typeNameOrClassDescriptor.equals("[Ljava.lang.String;")) {
-			return ParamUtil.getParameterValues(request, parameter);
+			return ParamUtil.getParameterValues(httpServletRequest, parameter);
 		}
 		else if (typeNameOrClassDescriptor.equals("[[Z")) {
-			String[] values = request.getParameterValues(parameter);
+			String[] values = httpServletRequest.getParameterValues(parameter);
 
 			if (ArrayUtil.isNotEmpty(values)) {
 				String[] values0 = StringUtil.split(values[0]);
@@ -256,12 +273,11 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new boolean[0][0];
-			}
+
+			return new boolean[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[D")) {
-			String[] values = request.getParameterValues(parameter);
+			String[] values = httpServletRequest.getParameterValues(parameter);
 
 			if (ArrayUtil.isNotEmpty(values)) {
 				String[] values0 = StringUtil.split(values[0]);
@@ -279,12 +295,11 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new double[0][0];
-			}
+
+			return new double[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[F")) {
-			String[] values = request.getParameterValues(parameter);
+			String[] values = httpServletRequest.getParameterValues(parameter);
 
 			if (ArrayUtil.isNotEmpty(values)) {
 				String[] values0 = StringUtil.split(values[0]);
@@ -302,12 +317,11 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new float[0][0];
-			}
+
+			return new float[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[I")) {
-			String[] values = request.getParameterValues(parameter);
+			String[] values = httpServletRequest.getParameterValues(parameter);
 
 			if (ArrayUtil.isNotEmpty(values)) {
 				String[] values0 = StringUtil.split(values[0]);
@@ -324,12 +338,11 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new int[0][0];
-			}
+
+			return new int[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[J")) {
-			String[] values = request.getParameterValues(parameter);
+			String[] values = httpServletRequest.getParameterValues(parameter);
 
 			if (ArrayUtil.isNotEmpty(values)) {
 				String[] values0 = StringUtil.split(values[0]);
@@ -346,12 +359,11 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new long[0][0];
-			}
+
+			return new long[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[S")) {
-			String[] values = request.getParameterValues(parameter);
+			String[] values = httpServletRequest.getParameterValues(parameter);
 
 			if (ArrayUtil.isNotEmpty(values)) {
 				String[] values0 = StringUtil.split(values[0]);
@@ -369,12 +381,11 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new short[0][0];
-			}
+
+			return new short[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals("[[Ljava.lang.String")) {
-			String[] values = request.getParameterValues(parameter);
+			String[] values = httpServletRequest.getParameterValues(parameter);
 
 			if (ArrayUtil.isNotEmpty(values)) {
 				String[] values0 = StringUtil.split(values[0]);
@@ -388,9 +399,8 @@ public class JSONServiceAction extends JSONAction {
 
 				return doubleArray;
 			}
-			else {
-				return new String[0][0];
-			}
+
+			return new String[0][0];
 		}
 		else if (typeNameOrClassDescriptor.equals(
 					"java.util.Map<java.util.Locale, java.lang.String>")) {
@@ -401,13 +411,14 @@ public class JSONServiceAction extends JSONAction {
 		}
 		else {
 			try {
-				return JSONFactoryUtil.looseDeserializeSafe(value);
+				return JSONFactoryUtil.looseDeserialize(value);
 			}
-			catch (Exception e) {
+			catch (Exception exception) {
 				_log.error(
-					"Unsupported parameter type for class " + clazz +
-						", method " + methodName + ", parameter " + parameter +
-							", and type " + typeNameOrClassDescriptor);
+					StringBundler.concat(
+						"Unsupported parameter type for class ", clazz,
+						", method ", methodName, ", parameter ", parameter,
+						", and type ", typeNameOrClassDescriptor));
 
 				return null;
 			}
@@ -415,10 +426,11 @@ public class JSONServiceAction extends JSONAction {
 	}
 
 	/**
-	 * @see JSONWebServiceServiceAction#getCSRFOrigin(HttpServletRequest)
+	 * @see com.liferay.portal.jsonwebservice.JSONWebServiceServiceAction#getCSRFOrigin(
+	 *      HttpServletRequest)
 	 */
 	@Override
-	protected String getCSRFOrigin(HttpServletRequest request) {
+	protected String getCSRFOrigin(HttpServletRequest httpServletRequest) {
 		StringBundler sb = new StringBundler(6);
 
 		sb.append(ClassUtil.getClassName(this));
@@ -426,14 +438,14 @@ public class JSONServiceAction extends JSONAction {
 		sb.append(StringPool.SLASH);
 
 		String serviceClassName = ParamUtil.getString(
-			request, "serviceClassName");
+			httpServletRequest, "serviceClassName");
 
 		sb.append(serviceClassName);
 
 		sb.append(StringPool.POUND);
 
 		String serviceMethodName = ParamUtil.getString(
-			request, "serviceMethodName");
+			httpServletRequest, "serviceMethodName");
 
 		sb.append(serviceMethodName);
 
@@ -475,47 +487,53 @@ public class JSONServiceAction extends JSONAction {
 		Method[] methods = clazz.getMethods();
 
 		for (Method curMethod : methods) {
-			if (curMethod.getName().equals(methodName)) {
-				Type[] curParameterTypes = curMethod.getGenericParameterTypes();
+			String curMethodName = curMethod.getName();
 
-				if (curParameterTypes.length == parameters.length) {
-					if ((parameterTypes.length > 0) &&
-						(parameterTypes.length == curParameterTypes.length)) {
+			if (!curMethodName.equals(methodName)) {
+				continue;
+			}
 
-						boolean match = true;
+			Type[] curParameterTypes = curMethod.getGenericParameterTypes();
 
-						for (int j = 0; j < parameterTypes.length; j++) {
-							String t1 = parameterTypes[j];
-							String t2 = getTypeNameOrClassDescriptor(
-								curParameterTypes[j]);
+			if (curParameterTypes.length != parameters.length) {
+				continue;
+			}
 
-							if (!t1.equals(t2)) {
-								match = false;
-							}
-						}
+			if ((parameterTypes.length > 0) &&
+				(parameterTypes.length == curParameterTypes.length)) {
 
-						if (match) {
-							method = curMethod;
-							methodParameterTypes = curParameterTypes;
+				boolean match = true;
 
-							break;
-						}
-					}
-					else if (method != null) {
-						String parametersString = StringUtil.merge(parameters);
+				for (int j = 0; j < parameterTypes.length; j++) {
+					String t1 = parameterTypes[j];
+					String t2 = getTypeNameOrClassDescriptor(
+						curParameterTypes[j]);
 
-						_log.error(
-							"Obscure method name for class " + clazz +
-								", method " + methodName + ", and parameters " +
-									parametersString);
-
-						return null;
-					}
-					else {
-						method = curMethod;
-						methodParameterTypes = curParameterTypes;
+					if (!t1.equals(t2)) {
+						match = false;
 					}
 				}
+
+				if (match) {
+					method = curMethod;
+					methodParameterTypes = curParameterTypes;
+
+					break;
+				}
+			}
+			else if (method != null) {
+				String parametersString = StringUtil.merge(parameters);
+
+				_log.error(
+					StringBundler.concat(
+						"Obscure method name for class ", clazz, ", method ",
+						methodName, ", and parameters ", parametersString));
+
+				return null;
+			}
+			else {
+				method = curMethod;
+				methodParameterTypes = curParameterTypes;
 			}
 		}
 
@@ -532,8 +550,9 @@ public class JSONServiceAction extends JSONAction {
 		String parametersString = StringUtil.merge(parameters);
 
 		_log.error(
-			"No method found for class " + clazz + ", method " + methodName +
-				", and parameters " + parametersString);
+			StringBundler.concat(
+				"No method found for class ", clazz, ", method ", methodName,
+				", and parameters ", parametersString));
 
 		return null;
 	}
@@ -543,9 +562,9 @@ public class JSONServiceAction extends JSONAction {
 		return _REROUTE_PATH;
 	}
 
-	protected String getReturnValue(Object returnObj) throws Exception {
-		if (returnObj instanceof JSONSerializable) {
-			JSONSerializable jsonSerializable = (JSONSerializable)returnObj;
+	protected String getReturnValue(Object returnObject) throws Exception {
+		if (returnObject instanceof JSONSerializable) {
+			JSONSerializable jsonSerializable = (JSONSerializable)returnObject;
 
 			return jsonSerializable.toJSONString();
 		}
@@ -554,14 +573,14 @@ public class JSONServiceAction extends JSONAction {
 
 		jsonSerializer.exclude("*.class");
 
-		return jsonSerializer.serializeDeep(returnObj);
+		return jsonSerializer.serializeDeep(returnObject);
 	}
 
 	protected String[] getStringArrayFromJSON(
-			HttpServletRequest request, String param)
+			HttpServletRequest httpServletRequest, String param)
 		throws JSONException {
 
-		String json = ParamUtil.getString(request, param, "[]");
+		String json = ParamUtil.getString(httpServletRequest, param, "[]");
 
 		JSONArray jsonArray = JSONFactoryUtil.createJSONArray(json);
 
@@ -585,8 +604,8 @@ public class JSONServiceAction extends JSONAction {
 				return fieldDescriptor;
 			}
 
-			dimensions = dimensions.replace(
-				StringPool.CLOSE_BRACKET, StringPool.BLANK);
+			dimensions = StringUtil.replace(
+				dimensions, CharPool.CLOSE_BRACKET, StringPool.BLANK);
 
 			if (fieldDescriptor.equals("boolean")) {
 				fieldDescriptor = "Z";
@@ -613,8 +632,11 @@ public class JSONServiceAction extends JSONAction {
 				fieldDescriptor = "S";
 			}
 			else {
-				fieldDescriptor = "L".concat(fieldDescriptor).concat(
-					StringPool.SEMICOLON);
+				fieldDescriptor = "L".concat(
+					fieldDescriptor
+				).concat(
+					StringPool.SEMICOLON
+				);
 			}
 
 			return dimensions.concat(fieldDescriptor);
@@ -623,9 +645,11 @@ public class JSONServiceAction extends JSONAction {
 		throw new IllegalArgumentException(type.toString() + " is invalid");
 	}
 
-	protected boolean isValidRequest(HttpServletRequest request) {
-		String className = ParamUtil.getString(request, "serviceClassName");
-		String methodName = ParamUtil.getString(request, "serviceMethodName");
+	protected boolean isValidRequest(HttpServletRequest httpServletRequest) {
+		String className = ParamUtil.getString(
+			httpServletRequest, "serviceClassName");
+		String methodName = ParamUtil.getString(
+			httpServletRequest, "serviceMethodName");
 
 		if (className.contains(".service.") &&
 			className.endsWith("ServiceUtil") &&
@@ -635,21 +659,20 @@ public class JSONServiceAction extends JSONAction {
 
 			return true;
 		}
-		else {
-			return false;
-		}
+
+		return false;
 	}
 
 	private static final String _REROUTE_PATH = "/api/json";
 
-	private static Log _log = LogFactoryUtil.getLog(JSONServiceAction.class);
+	private static final Log _log = LogFactoryUtil.getLog(
+		JSONServiceAction.class);
 
-	private static Pattern _fieldDescriptorPattern = Pattern.compile(
+	private static final Pattern _fieldDescriptorPattern = Pattern.compile(
 		"^(.*?)((\\[\\])*)$", Pattern.DOTALL);
 
-	private Set<String> _invalidClassNames;
-	private Set<String> _invalidMethodNames;
-	private Map<String, Object[]> _methodCache =
-		new HashMap<String, Object[]>();
+	private final Set<String> _invalidClassNames;
+	private final Set<String> _invalidMethodNames;
+	private final Map<String, Object[]> _methodCache = new HashMap<>();
 
 }
