@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2013 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -14,31 +14,36 @@
 
 package com.liferay.portal.util;
 
+import com.liferay.petra.io.StreamUtil;
+import com.liferay.petra.string.StringBundler;
+import com.liferay.portal.db.partition.DBPartitionUtil;
 import com.liferay.portal.events.EventsProcessorUtil;
 import com.liferay.portal.kernel.dao.jdbc.DataAccess;
-import com.liferay.portal.kernel.dao.shard.ShardUtil;
+import com.liferay.portal.kernel.language.LanguageUtil;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
+import com.liferay.portal.kernel.model.Company;
+import com.liferay.portal.kernel.model.Group;
+import com.liferay.portal.kernel.model.LayoutSet;
+import com.liferay.portal.kernel.model.PortletCategory;
+import com.liferay.portal.kernel.model.User;
+import com.liferay.portal.kernel.model.VirtualHost;
+import com.liferay.portal.kernel.security.auth.CompanyThreadLocal;
+import com.liferay.portal.kernel.security.auth.PrincipalThreadLocal;
+import com.liferay.portal.kernel.service.CompanyLocalServiceUtil;
+import com.liferay.portal.kernel.service.GroupLocalServiceUtil;
+import com.liferay.portal.kernel.service.LayoutSetLocalServiceUtil;
+import com.liferay.portal.kernel.service.PortletLocalServiceUtil;
+import com.liferay.portal.kernel.service.UserLocalServiceUtil;
+import com.liferay.portal.kernel.service.VirtualHostLocalServiceUtil;
 import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.CookieKeys;
 import com.liferay.portal.kernel.util.GetterUtil;
-import com.liferay.portal.kernel.util.HttpUtil;
+import com.liferay.portal.kernel.util.PortalUtil;
 import com.liferay.portal.kernel.util.PropsKeys;
 import com.liferay.portal.kernel.util.SetUtil;
 import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.model.Company;
-import com.liferay.portal.model.Group;
-import com.liferay.portal.model.LayoutSet;
-import com.liferay.portal.model.PortletCategory;
-import com.liferay.portal.model.VirtualHost;
-import com.liferay.portal.search.lucene.LuceneHelperUtil;
-import com.liferay.portal.security.auth.CompanyThreadLocal;
-import com.liferay.portal.service.CompanyLocalServiceUtil;
-import com.liferay.portal.service.GroupLocalServiceUtil;
-import com.liferay.portal.service.LayoutSetLocalServiceUtil;
-import com.liferay.portal.service.PortletLocalServiceUtil;
-import com.liferay.portal.service.VirtualHostLocalServiceUtil;
-import com.liferay.portlet.journal.service.JournalContentSearchLocalServiceUtil;
+import com.liferay.portal.kernel.util.WebKeys;
 
 import java.sql.Connection;
 import java.sql.PreparedStatement;
@@ -48,6 +53,7 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
+import java.util.TreeMap;
 
 import javax.servlet.ServletContext;
 import javax.servlet.http.HttpServletRequest;
@@ -61,76 +67,6 @@ import javax.servlet.http.HttpServletRequest;
 public class PortalInstances {
 
 	public static void addCompanyId(long companyId) {
-		_instance._addCompanyId(companyId);
-	}
-
-	public static long getCompanyId(HttpServletRequest request) {
-		return _instance._getCompanyId(request);
-	}
-
-	public static long[] getCompanyIds() {
-		return _instance._getCompanyIds();
-	}
-
-	public static long[] getCompanyIdsBySQL() throws SQLException {
-		return _instance._getCompanyIdsBySQL();
-	}
-
-	public static long getDefaultCompanyId() {
-		return _instance._getDefaultCompanyId();
-	}
-
-	public static String[] getWebIds() {
-		return _instance._getWebIds();
-	}
-
-	public static long initCompany(
-		ServletContext servletContext, String webId) {
-
-		return _instance._initCompany(servletContext, webId);
-	}
-
-	public static boolean isAutoLoginIgnoreHost(String host) {
-		return _instance._isAutoLoginIgnoreHost(host);
-	}
-
-	public static boolean isAutoLoginIgnorePath(String path) {
-		return _instance._isAutoLoginIgnorePath(path);
-	}
-
-	public static boolean isCompanyActive(long companyId) {
-		return _instance._isCompanyActive(companyId);
-	}
-
-	public static boolean isVirtualHostsIgnoreHost(String host) {
-		return _instance._isVirtualHostsIgnoreHost(host);
-	}
-
-	public static boolean isVirtualHostsIgnorePath(String path) {
-		return _instance._isVirtualHostsIgnorePath(path);
-	}
-
-	public static void reload(ServletContext servletContext) {
-		_instance._reload(servletContext);
-	}
-
-	public static void removeCompany(long companyId) {
-		_instance._removeCompanyId(companyId);
-	}
-
-	private PortalInstances() {
-		_companyIds = new long[0];
-		_autoLoginIgnoreHosts = SetUtil.fromArray(
-			PropsUtil.getArray(PropsKeys.AUTO_LOGIN_IGNORE_HOSTS));
-		_autoLoginIgnorePaths = SetUtil.fromArray(
-			PropsUtil.getArray(PropsKeys.AUTO_LOGIN_IGNORE_PATHS));
-		_virtualHostsIgnoreHosts = SetUtil.fromArray(
-			PropsUtil.getArray(PropsKeys.VIRTUAL_HOSTS_IGNORE_HOSTS));
-		_virtualHostsIgnorePaths = SetUtil.fromArray(
-			PropsUtil.getArray(PropsKeys.VIRTUAL_HOSTS_IGNORE_PATHS));
-	}
-
-	private void _addCompanyId(long companyId) {
 		if (ArrayUtil.contains(_companyIds, companyId)) {
 			return;
 		}
@@ -144,12 +80,13 @@ public class PortalInstances {
 		_companyIds = companyIds;
 	}
 
-	private long _getCompanyId(HttpServletRequest request) {
+	public static long getCompanyId(HttpServletRequest httpServletRequest) {
 		if (_log.isDebugEnabled()) {
 			_log.debug("Get company id");
 		}
 
-		Long companyIdObj = (Long)request.getAttribute(WebKeys.COMPANY_ID);
+		Long companyIdObj = (Long)httpServletRequest.getAttribute(
+			WebKeys.COMPANY_ID);
 
 		if (_log.isDebugEnabled()) {
 			_log.debug("Company id from request " + companyIdObj);
@@ -159,7 +96,7 @@ public class PortalInstances {
 			return companyIdObj.longValue();
 		}
 
-		long companyId = _getCompanyIdByVirtualHosts(request);
+		long companyId = _getCompanyIdByVirtualHosts(httpServletRequest);
 
 		if (_log.isDebugEnabled()) {
 			_log.debug("Company id from host " + companyId);
@@ -167,17 +104,20 @@ public class PortalInstances {
 
 		if (companyId <= 0) {
 			long cookieCompanyId = GetterUtil.getLong(
-				CookieKeys.getCookie(request, CookieKeys.COMPANY_ID, false));
+				CookieKeys.getCookie(
+					httpServletRequest, CookieKeys.COMPANY_ID, false));
 
 			if (cookieCompanyId > 0) {
 				try {
-					if (CompanyLocalServiceUtil.fetchCompanyById(
-							cookieCompanyId) == null) {
+					Company cookieCompany =
+						CompanyLocalServiceUtil.fetchCompanyById(
+							cookieCompanyId);
 
+					if (cookieCompany == null) {
 						if (_log.isWarnEnabled()) {
 							_log.warn(
 								"Company id from cookie " + cookieCompanyId +
-										" does not exist");
+									" does not exist");
 						}
 					}
 					else {
@@ -188,14 +128,14 @@ public class PortalInstances {
 						}
 					}
 				}
-				catch (Exception e) {
-					_log.error(e, e);
+				catch (Exception exception) {
+					_log.error(exception, exception);
 				}
 			}
 		}
 
 		if (companyId <= 0) {
-			companyId = _getDefaultCompanyId();
+			companyId = getDefaultCompanyId();
 
 			if (_log.isDebugEnabled()) {
 				_log.debug("Default company id " + companyId);
@@ -206,12 +146,14 @@ public class PortalInstances {
 			_log.debug("Set company id " + companyId);
 		}
 
-		request.setAttribute(WebKeys.COMPANY_ID, new Long(companyId));
+		httpServletRequest.setAttribute(
+			WebKeys.COMPANY_ID, Long.valueOf(companyId));
 
 		CompanyThreadLocal.setCompanyId(companyId);
 
 		if (Validator.isNotNull(PropsValues.VIRTUAL_HOSTS_DEFAULT_SITE_NAME) &&
-			(request.getAttribute(WebKeys.VIRTUAL_HOST_LAYOUT_SET) == null)) {
+			(httpServletRequest.getAttribute(WebKeys.VIRTUAL_HOST_LAYOUT_SET) ==
+				null)) {
 
 			try {
 				Group group = GroupLocalServiceUtil.getGroup(
@@ -220,102 +162,32 @@ public class PortalInstances {
 				LayoutSet layoutSet = LayoutSetLocalServiceUtil.getLayoutSet(
 					group.getGroupId(), false);
 
-				if (Validator.isNull(layoutSet.getVirtualHostname())) {
-					request.setAttribute(
+				TreeMap<String, String> virtualHostnames =
+					layoutSet.getVirtualHostnames();
+
+				if (virtualHostnames.isEmpty()) {
+					httpServletRequest.setAttribute(
 						WebKeys.VIRTUAL_HOST_LAYOUT_SET, layoutSet);
 				}
 			}
-			catch (Exception e) {
-				_log.error(e, e);
+			catch (Exception exception) {
+				_log.error(exception, exception);
 			}
 		}
 
 		return companyId;
 	}
 
-	private long _getCompanyIdByVirtualHosts(HttpServletRequest request) {
-		String host = PortalUtil.getHost(request);
-
-		if (_log.isDebugEnabled()) {
-			_log.debug("Host " + host);
-		}
-
-		if (Validator.isNull(host) || _isVirtualHostsIgnoreHost(host)) {
-			return 0;
-		}
-
-		try {
-			VirtualHost virtualHost =
-				VirtualHostLocalServiceUtil.fetchVirtualHost(host);
-
-			if (virtualHost == null) {
-				return 0;
-			}
-
-			if (virtualHost.getLayoutSetId() != 0) {
-				LayoutSet layoutSet = null;
-
-				try {
-					ShardUtil.pushCompanyService(virtualHost.getCompanyId());
-
-					layoutSet = LayoutSetLocalServiceUtil.getLayoutSet(
-						virtualHost.getLayoutSetId());
-				}
-				finally {
-					ShardUtil.popCompanyService();
-				}
-
-				if (_log.isDebugEnabled()) {
-					_log.debug(
-						"Company " + virtualHost.getCompanyId() +
-							" is associated with layout set " +
-								virtualHost.getLayoutSetId());
-				}
-
-				request.setAttribute(
-					WebKeys.VIRTUAL_HOST_LAYOUT_SET, layoutSet);
-			}
-
-			return virtualHost.getCompanyId();
-		}
-		catch (Exception e) {
-			_log.error(e, e);
-		}
-
-		return 0;
-	}
-
-	private long[] _getCompanyIds() {
+	public static long[] getCompanyIds() {
 		return _companyIds;
 	}
 
-	private long[] _getCompanyIdsBySQL() throws SQLException {
-		List<Long> companyIds = new ArrayList<Long>();
+	public static long[] getCompanyIdsBySQL() throws SQLException {
+		List<Long> companyIds = new ArrayList<>();
 
-		String currentShardName = ShardUtil.setTargetSource(
-			PropsValues.SHARD_DEFAULT_NAME);
-
-		if (Validator.isNotNull(currentShardName)) {
-			ShardUtil.pushCompanyService(PropsValues.SHARD_DEFAULT_NAME);
-		}
-
-		Connection con = null;
-		PreparedStatement ps = null;
-		ResultSet rs = null;
-
-		try {
-			con = DataAccess.getConnection();
-
-			ps = con.prepareStatement(_GET_COMPANY_IDS);
-
-			if (Validator.isNotNull(currentShardName)) {
-				ps.setString(1, currentShardName);
-			}
-			else {
-				ps.setString(1, PropsValues.SHARD_DEFAULT_NAME);
-			}
-
-			rs = ps.executeQuery();
+		try (Connection con = DataAccess.getConnection();
+			PreparedStatement ps = con.prepareStatement(_GET_COMPANY_IDS);
+			ResultSet rs = ps.executeQuery()) {
 
 			while (rs.next()) {
 				long companyId = rs.getLong("companyId");
@@ -323,25 +195,15 @@ public class PortalInstances {
 				companyIds.add(companyId);
 			}
 		}
-		finally {
-			if (Validator.isNotNull(currentShardName)) {
-				ShardUtil.popCompanyService();
 
-				ShardUtil.setTargetSource(currentShardName);
-			}
-
-			DataAccess.cleanUp(con, ps, rs);
-		}
-
-		return ArrayUtil.toArray(
-			companyIds.toArray(new Long[companyIds.size()]));
+		return ArrayUtil.toArray(companyIds.toArray(new Long[0]));
 	}
 
-	private long _getDefaultCompanyId() {
+	public static long getDefaultCompanyId() {
 		return _companyIds[0];
 	}
 
-	private String[] _getWebIds() {
+	public static String[] getWebIds() {
 		if (_webIds != null) {
 			return _webIds;
 		}
@@ -354,23 +216,25 @@ public class PortalInstances {
 			List<Company> companies = CompanyLocalServiceUtil.getCompanies(
 				false);
 
-			List<String> webIdsList = new ArrayList<String>(companies.size());
+			List<String> webIdsList = new ArrayList<>(companies.size());
 
 			for (Company company : companies) {
 				String webId = company.getWebId();
 
 				if (webId.equals(PropsValues.COMPANY_DEFAULT_WEB_ID)) {
 					webIdsList.add(0, webId);
+
+					DBPartitionUtil.setDefaultCompanyId(company.getCompanyId());
 				}
 				else {
 					webIdsList.add(webId);
 				}
 			}
 
-			_webIds = webIdsList.toArray(new String[webIdsList.size()]);
+			_webIds = webIdsList.toArray(new String[0]);
 		}
-		catch (Exception e) {
-			_log.error(e, e);
+		catch (Exception exception) {
+			_log.error(exception, exception);
 		}
 
 		if (ArrayUtil.isEmpty(_webIds)) {
@@ -380,7 +244,8 @@ public class PortalInstances {
 		return _webIds;
 	}
 
-	private long _initCompany(ServletContext servletContext, String webId) {
+	public static long initCompany(
+		ServletContext servletContext, String webId) {
 
 		// Begin initializing company
 
@@ -391,22 +256,43 @@ public class PortalInstances {
 		long companyId = 0;
 
 		try {
-			Company company = CompanyLocalServiceUtil.checkCompany(webId);
+			Company company = CompanyLocalServiceUtil.getCompanyByWebId(webId);
 
 			companyId = company.getCompanyId();
 		}
-		catch (Exception e) {
-			_log.error(e, e);
+		catch (Exception exception) {
+			_log.error(exception, exception);
+
+			return companyId;
 		}
 
 		Long currentThreadCompanyId = CompanyThreadLocal.getCompanyId();
 
+		String currentThreadPrincipalName = PrincipalThreadLocal.getName();
+
 		try {
 			CompanyThreadLocal.setCompanyId(companyId);
 
-			// Lucene
+			try {
+				CompanyLocalServiceUtil.checkCompany(webId);
+			}
+			catch (Exception exception) {
+				_log.error(exception, exception);
+			}
 
-			LuceneHelperUtil.startup(companyId);
+			String principalName = null;
+
+			long userId = PrincipalThreadLocal.getUserId();
+
+			if (userId > 0) {
+				User user = UserLocalServiceUtil.fetchUser(userId);
+
+				if ((user != null) && (user.getCompanyId() == companyId)) {
+					principalName = currentThreadPrincipalName;
+				}
+			}
+
+			PrincipalThreadLocal.setName(principalName);
 
 			// Initialize display
 
@@ -415,11 +301,13 @@ public class PortalInstances {
 			}
 
 			try {
-				String xml = HttpUtil.URLtoString(
-					servletContext.getResource("/WEB-INF/liferay-display.xml"));
+				String xml = StreamUtil.toString(
+					servletContext.getResourceAsStream(
+						"/WEB-INF/liferay-display.xml"));
 
-				PortletCategory portletCategory = (PortletCategory)
-					WebAppPool.get(companyId, WebKeys.PORTLET_CATEGORY);
+				PortletCategory portletCategory =
+					(PortletCategory)WebAppPool.get(
+						companyId, WebKeys.PORTLET_CATEGORY);
 
 				if (portletCategory == null) {
 					portletCategory = new PortletCategory();
@@ -430,9 +318,7 @@ public class PortalInstances {
 
 				portletCategory.merge(newPortletCategory);
 
-				for (int i = 0; i < _companyIds.length; i++) {
-					long currentCompanyId = _companyIds[i];
-
+				for (long currentCompanyId : _companyIds) {
 					PortletCategory currentPortletCategory =
 						(PortletCategory)WebAppPool.get(
 							currentCompanyId, WebKeys.PORTLET_CATEGORY);
@@ -445,27 +331,8 @@ public class PortalInstances {
 				WebAppPool.put(
 					companyId, WebKeys.PORTLET_CATEGORY, portletCategory);
 			}
-			catch (Exception e) {
-				_log.error(e, e);
-			}
-
-			// Check journal content search
-
-			if (_log.isDebugEnabled()) {
-				_log.debug("Check journal content search");
-			}
-
-			if (GetterUtil.getBoolean(
-					PropsUtil.get(
-						PropsKeys.JOURNAL_SYNC_CONTENT_SEARCH_ON_STARTUP))) {
-
-				try {
-					JournalContentSearchLocalServiceUtil.checkContentSearches(
-						companyId);
-				}
-				catch (Exception e) {
-					_log.error(e, e);
-				}
+			catch (Exception exception) {
+				_log.error(exception, exception);
 			}
 
 			// Process application startup events
@@ -480,36 +347,39 @@ public class PortalInstances {
 					PropsValues.APPLICATION_STARTUP_EVENTS,
 					new String[] {String.valueOf(companyId)});
 			}
-			catch (Exception e) {
-				_log.error(e, e);
+			catch (Exception exception) {
+				_log.error(exception, exception);
 			}
 
 			// End initializing company
 
 			if (_log.isDebugEnabled()) {
 				_log.debug(
-					"End initializing company with web id " + webId +
-						" and company id " + companyId);
+					StringBundler.concat(
+						"End initializing company with web id ", webId,
+						" and company id ", companyId));
 			}
 
 			addCompanyId(companyId);
 		}
 		finally {
 			CompanyThreadLocal.setCompanyId(currentThreadCompanyId);
+
+			PrincipalThreadLocal.setName(currentThreadPrincipalName);
 		}
 
 		return companyId;
 	}
 
-	private boolean _isAutoLoginIgnoreHost(String host) {
+	public static boolean isAutoLoginIgnoreHost(String host) {
 		return _autoLoginIgnoreHosts.contains(host);
 	}
 
-	private boolean _isAutoLoginIgnorePath(String path) {
+	public static boolean isAutoLoginIgnorePath(String path) {
 		return _autoLoginIgnorePaths.contains(path);
 	}
 
-	private boolean _isCompanyActive(long companyId) {
+	public static boolean isCompanyActive(long companyId) {
 		try {
 			Company company = CompanyLocalServiceUtil.fetchCompanyById(
 				companyId);
@@ -518,58 +388,142 @@ public class PortalInstances {
 				return company.isActive();
 			}
 		}
-		catch (Exception e) {
-			_log.error(e, e);
+		catch (Exception exception) {
+			_log.error(exception, exception);
 		}
 
 		return false;
 	}
 
-	private boolean _isVirtualHostsIgnoreHost(String host) {
+	public static boolean isVirtualHostsIgnoreHost(String host) {
 		return _virtualHostsIgnoreHosts.contains(host);
 	}
 
-	private boolean _isVirtualHostsIgnorePath(String path) {
+	public static boolean isVirtualHostsIgnorePath(String path) {
 		return _virtualHostsIgnorePaths.contains(path);
 	}
 
-	private void _reload(ServletContext servletContext) {
+	public static void reload(ServletContext servletContext) {
 		_companyIds = new long[0];
 		_webIds = null;
 
-		String[] webIds = _getWebIds();
+		String[] webIds = getWebIds();
 
 		for (String webId : webIds) {
-			_initCompany(servletContext, webId);
+			initCompany(servletContext, webId);
 		}
 	}
 
-	private void _removeCompanyId(long companyId) {
+	public static void removeCompany(long companyId) {
+		try {
+			EventsProcessorUtil.process(
+				PropsKeys.APPLICATION_SHUTDOWN_EVENTS,
+				PropsValues.APPLICATION_SHUTDOWN_EVENTS,
+				new String[] {String.valueOf(companyId)});
+		}
+		catch (Exception exception) {
+			_log.error(exception, exception);
+		}
+
 		_companyIds = ArrayUtil.remove(_companyIds, companyId);
 		_webIds = null;
 
-		_getWebIds();
-
-		LuceneHelperUtil.delete(companyId);
-
-		LuceneHelperUtil.shutdown(companyId);
+		getWebIds();
 
 		WebAppPool.remove(companyId, WebKeys.PORTLET_CATEGORY);
 	}
 
+	private static long _getCompanyIdByVirtualHosts(
+		HttpServletRequest httpServletRequest) {
+
+		String host = PortalUtil.getHost(httpServletRequest);
+
+		if (_log.isDebugEnabled()) {
+			_log.debug("Host " + host);
+		}
+
+		if (Validator.isNull(host) || isVirtualHostsIgnoreHost(host)) {
+			return 0;
+		}
+
+		try {
+			VirtualHost virtualHost =
+				VirtualHostLocalServiceUtil.fetchVirtualHost(host);
+
+			if (virtualHost == null) {
+				return 0;
+			}
+
+			if (virtualHost.getLayoutSetId() != 0) {
+				LayoutSet layoutSet = LayoutSetLocalServiceUtil.getLayoutSet(
+					virtualHost.getLayoutSetId());
+
+				if (_log.isDebugEnabled()) {
+					_log.debug(
+						StringBundler.concat(
+							"Company ", virtualHost.getCompanyId(),
+							" is associated with layout set ",
+							virtualHost.getLayoutSetId()));
+				}
+
+				httpServletRequest.setAttribute(
+					WebKeys.VIRTUAL_HOST_LAYOUT_SET, layoutSet);
+
+				// Virtual host default locale
+
+				String languageId = virtualHost.getLanguageId();
+
+				if (Validator.isNotNull(languageId) &&
+					LanguageUtil.isAvailableLocale(
+						layoutSet.getGroupId(), languageId)) {
+
+					if (_log.isDebugEnabled()) {
+						_log.debug(
+							StringBundler.concat(
+								"Virtual host ", virtualHost.getHostname(),
+								" has default language ", languageId));
+					}
+
+					httpServletRequest.setAttribute(
+						WebKeys.I18N_LANGUAGE_ID, languageId);
+				}
+			}
+
+			return virtualHost.getCompanyId();
+		}
+		catch (Exception exception) {
+			_log.error(exception, exception);
+		}
+
+		return 0;
+	}
+
+	private PortalInstances() {
+	}
+
 	private static final String _GET_COMPANY_IDS =
-		"select companyId from Company, Shard where Company.companyId = " +
-			"Shard.classPK and Shard.name = ?";
+		"select companyId from Company";
 
-	private static Log _log = LogFactoryUtil.getLog(PortalInstances.class);
+	private static final Log _log = LogFactoryUtil.getLog(
+		PortalInstances.class);
 
-	private static PortalInstances _instance = new PortalInstances();
+	private static final Set<String> _autoLoginIgnoreHosts;
+	private static final Set<String> _autoLoginIgnorePaths;
+	private static long[] _companyIds;
+	private static final Set<String> _virtualHostsIgnoreHosts;
+	private static final Set<String> _virtualHostsIgnorePaths;
+	private static String[] _webIds;
 
-	private Set<String> _autoLoginIgnoreHosts;
-	private Set<String> _autoLoginIgnorePaths;
-	private long[] _companyIds;
-	private Set<String> _virtualHostsIgnoreHosts;
-	private Set<String> _virtualHostsIgnorePaths;
-	private String[] _webIds;
+	static {
+		_companyIds = new long[0];
+		_autoLoginIgnoreHosts = SetUtil.fromArray(
+			PropsUtil.getArray(PropsKeys.AUTO_LOGIN_IGNORE_HOSTS));
+		_autoLoginIgnorePaths = SetUtil.fromArray(
+			PropsUtil.getArray(PropsKeys.AUTO_LOGIN_IGNORE_PATHS));
+		_virtualHostsIgnoreHosts = SetUtil.fromArray(
+			PropsUtil.getArray(PropsKeys.VIRTUAL_HOSTS_IGNORE_HOSTS));
+		_virtualHostsIgnorePaths = SetUtil.fromArray(
+			PropsUtil.getArray(PropsKeys.VIRTUAL_HOSTS_IGNORE_PATHS));
+	}
 
 }
