@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2013 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -14,89 +14,90 @@
 
 package com.liferay.portlet.usersadmin.util;
 
-import com.liferay.portal.NoSuchOrganizationException;
-import com.liferay.portal.NoSuchUserGroupException;
+import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.configuration.Filter;
 import com.liferay.portal.kernel.exception.PortalException;
-import com.liferay.portal.kernel.exception.SystemException;
+import com.liferay.portal.kernel.language.LanguageUtil;
+import com.liferay.portal.kernel.model.Address;
+import com.liferay.portal.kernel.model.EmailAddress;
+import com.liferay.portal.kernel.model.Group;
+import com.liferay.portal.kernel.model.OrgLabor;
+import com.liferay.portal.kernel.model.Organization;
+import com.liferay.portal.kernel.model.Phone;
+import com.liferay.portal.kernel.model.Role;
+import com.liferay.portal.kernel.model.User;
+import com.liferay.portal.kernel.model.UserGroup;
+import com.liferay.portal.kernel.model.UserGroupRole;
+import com.liferay.portal.kernel.model.Website;
+import com.liferay.portal.kernel.model.role.RoleConstants;
 import com.liferay.portal.kernel.search.Document;
 import com.liferay.portal.kernel.search.Field;
 import com.liferay.portal.kernel.search.Hits;
 import com.liferay.portal.kernel.search.Indexer;
 import com.liferay.portal.kernel.search.IndexerRegistryUtil;
-import com.liferay.portal.kernel.security.pacl.DoPrivileged;
+import com.liferay.portal.kernel.security.auth.PrincipalThreadLocal;
+import com.liferay.portal.kernel.security.membershippolicy.OrganizationMembershipPolicyUtil;
+import com.liferay.portal.kernel.security.membershippolicy.SiteMembershipPolicyUtil;
+import com.liferay.portal.kernel.security.permission.ActionKeys;
+import com.liferay.portal.kernel.security.permission.PermissionChecker;
+import com.liferay.portal.kernel.service.AddressLocalServiceUtil;
+import com.liferay.portal.kernel.service.AddressServiceUtil;
+import com.liferay.portal.kernel.service.EmailAddressLocalServiceUtil;
+import com.liferay.portal.kernel.service.EmailAddressServiceUtil;
+import com.liferay.portal.kernel.service.GroupLocalServiceUtil;
+import com.liferay.portal.kernel.service.OrgLaborLocalServiceUtil;
+import com.liferay.portal.kernel.service.OrgLaborServiceUtil;
+import com.liferay.portal.kernel.service.OrganizationLocalServiceUtil;
+import com.liferay.portal.kernel.service.PhoneLocalServiceUtil;
+import com.liferay.portal.kernel.service.PhoneServiceUtil;
+import com.liferay.portal.kernel.service.RoleLocalServiceUtil;
+import com.liferay.portal.kernel.service.ServiceContext;
+import com.liferay.portal.kernel.service.UserGroupLocalServiceUtil;
+import com.liferay.portal.kernel.service.UserGroupRoleLocalServiceUtil;
+import com.liferay.portal.kernel.service.UserLocalServiceUtil;
+import com.liferay.portal.kernel.service.WebsiteLocalServiceUtil;
+import com.liferay.portal.kernel.service.WebsiteServiceUtil;
+import com.liferay.portal.kernel.service.permission.GroupPermissionUtil;
+import com.liferay.portal.kernel.service.permission.OrganizationPermissionUtil;
+import com.liferay.portal.kernel.service.permission.RolePermissionUtil;
+import com.liferay.portal.kernel.service.permission.UserGroupPermissionUtil;
+import com.liferay.portal.kernel.service.permission.UserGroupRolePermissionUtil;
+import com.liferay.portal.kernel.service.permission.UserPermissionUtil;
+import com.liferay.portal.kernel.util.Accessor;
 import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.ListUtil;
 import com.liferay.portal.kernel.util.OrderByComparator;
 import com.liferay.portal.kernel.util.ParamUtil;
+import com.liferay.portal.kernel.util.PortalUtil;
 import com.liferay.portal.kernel.util.PropsKeys;
+import com.liferay.portal.kernel.util.SetUtil;
 import com.liferay.portal.kernel.util.StringUtil;
-import com.liferay.portal.kernel.util.Tuple;
-import com.liferay.portal.kernel.util.UniqueList;
 import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.model.Address;
-import com.liferay.portal.model.EmailAddress;
-import com.liferay.portal.model.Group;
-import com.liferay.portal.model.OrgLabor;
-import com.liferay.portal.model.Organization;
-import com.liferay.portal.model.Phone;
-import com.liferay.portal.model.Role;
-import com.liferay.portal.model.RoleConstants;
-import com.liferay.portal.model.User;
-import com.liferay.portal.model.UserGroup;
-import com.liferay.portal.model.UserGroupRole;
-import com.liferay.portal.model.Website;
-import com.liferay.portal.security.membershippolicy.OrganizationMembershipPolicyUtil;
-import com.liferay.portal.security.membershippolicy.SiteMembershipPolicyUtil;
-import com.liferay.portal.security.permission.ActionKeys;
-import com.liferay.portal.security.permission.PermissionChecker;
-import com.liferay.portal.service.AddressLocalServiceUtil;
-import com.liferay.portal.service.AddressServiceUtil;
-import com.liferay.portal.service.EmailAddressLocalServiceUtil;
-import com.liferay.portal.service.EmailAddressServiceUtil;
-import com.liferay.portal.service.GroupLocalServiceUtil;
-import com.liferay.portal.service.OrgLaborLocalServiceUtil;
-import com.liferay.portal.service.OrgLaborServiceUtil;
-import com.liferay.portal.service.OrganizationLocalServiceUtil;
-import com.liferay.portal.service.PhoneLocalServiceUtil;
-import com.liferay.portal.service.PhoneServiceUtil;
-import com.liferay.portal.service.RoleLocalServiceUtil;
-import com.liferay.portal.service.ServiceContext;
-import com.liferay.portal.service.UserGroupLocalServiceUtil;
-import com.liferay.portal.service.UserGroupRoleLocalServiceUtil;
-import com.liferay.portal.service.UserLocalServiceUtil;
-import com.liferay.portal.service.WebsiteLocalServiceUtil;
-import com.liferay.portal.service.WebsiteServiceUtil;
-import com.liferay.portal.service.permission.GroupPermissionUtil;
-import com.liferay.portal.service.permission.OrganizationPermissionUtil;
-import com.liferay.portal.service.permission.RolePermissionUtil;
-import com.liferay.portal.service.permission.UserGroupPermissionUtil;
-import com.liferay.portal.service.permission.UserGroupRolePermissionUtil;
-import com.liferay.portal.service.persistence.UserGroupRolePK;
-import com.liferay.portal.util.PortalUtil;
+import com.liferay.portal.kernel.util.comparator.GroupNameComparator;
+import com.liferay.portal.kernel.util.comparator.GroupTypeComparator;
+import com.liferay.portal.kernel.util.comparator.OrganizationNameComparator;
+import com.liferay.portal.kernel.util.comparator.OrganizationTypeComparator;
+import com.liferay.portal.kernel.util.comparator.RoleDescriptionComparator;
+import com.liferay.portal.kernel.util.comparator.RoleNameComparator;
+import com.liferay.portal.kernel.util.comparator.RoleTypeComparator;
+import com.liferay.portal.kernel.util.comparator.UserEmailAddressComparator;
+import com.liferay.portal.kernel.util.comparator.UserFirstNameComparator;
+import com.liferay.portal.kernel.util.comparator.UserGroupDescriptionComparator;
+import com.liferay.portal.kernel.util.comparator.UserGroupNameComparator;
+import com.liferay.portal.kernel.util.comparator.UserJobTitleComparator;
+import com.liferay.portal.kernel.util.comparator.UserLastNameComparator;
+import com.liferay.portal.kernel.util.comparator.UserScreenNameComparator;
 import com.liferay.portal.util.PropsUtil;
 import com.liferay.portal.util.PropsValues;
-import com.liferay.portal.util.comparator.GroupNameComparator;
-import com.liferay.portal.util.comparator.GroupTypeComparator;
-import com.liferay.portal.util.comparator.OrganizationNameComparator;
-import com.liferay.portal.util.comparator.OrganizationTypeComparator;
-import com.liferay.portal.util.comparator.RoleDescriptionComparator;
-import com.liferay.portal.util.comparator.RoleNameComparator;
-import com.liferay.portal.util.comparator.RoleTypeComparator;
-import com.liferay.portal.util.comparator.UserEmailAddressComparator;
-import com.liferay.portal.util.comparator.UserFirstNameComparator;
-import com.liferay.portal.util.comparator.UserGroupDescriptionComparator;
-import com.liferay.portal.util.comparator.UserGroupNameComparator;
-import com.liferay.portal.util.comparator.UserJobTitleComparator;
-import com.liferay.portal.util.comparator.UserLastNameComparator;
-import com.liferay.portal.util.comparator.UserScreenNameComparator;
+import com.liferay.users.admin.kernel.util.UsersAdmin;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Locale;
 import java.util.Set;
 
 import javax.portlet.ActionRequest;
@@ -111,18 +112,19 @@ import javax.servlet.http.HttpServletRequest;
  * @author Jorge Ferrer
  * @author Julio Camarero
  */
-@DoPrivileged
 public class UsersAdminImpl implements UsersAdmin {
 
 	@Override
 	public void addPortletBreadcrumbEntries(
-			Organization organization, HttpServletRequest request,
+			Organization organization, HttpServletRequest httpServletRequest,
 			RenderResponse renderResponse)
 		throws Exception {
 
 		PortletURL portletURL = renderResponse.createRenderURL();
 
-		portletURL.setParameter("struts_action", "/users_admin/view");
+		portletURL.setParameter("mvcRenderCommandName", "/users_admin/view");
+		portletURL.setParameter("toolbarItem", "view-all-organizations");
+		portletURL.setParameter("usersListView", "tree");
 
 		List<Organization> ancestorOrganizations = organization.getAncestors();
 
@@ -134,7 +136,8 @@ public class UsersAdminImpl implements UsersAdmin {
 				String.valueOf(ancestorOrganization.getOrganizationId()));
 
 			PortalUtil.addPortletBreadcrumbEntry(
-				request, ancestorOrganization.getName(), portletURL.toString());
+				httpServletRequest, ancestorOrganization.getName(),
+				portletURL.toString());
 		}
 
 		Organization unescapedOrganization = organization.toUnescapedModel();
@@ -144,21 +147,20 @@ public class UsersAdminImpl implements UsersAdmin {
 			String.valueOf(unescapedOrganization.getOrganizationId()));
 
 		PortalUtil.addPortletBreadcrumbEntry(
-			request, unescapedOrganization.getName(), portletURL.toString());
+			httpServletRequest, unescapedOrganization.getName(),
+			portletURL.toString());
 	}
 
 	@Override
 	public long[] addRequiredRoles(long userId, long[] roleIds)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		User user = UserLocalServiceUtil.getUser(userId);
-
-		return addRequiredRoles(user, roleIds);
+		return addRequiredRoles(UserLocalServiceUtil.getUser(userId), roleIds);
 	}
 
 	@Override
 	public long[] addRequiredRoles(User user, long[] roleIds)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		if (user.isDefaultUser()) {
 			return removeRequiredRoles(user, roleIds);
@@ -190,21 +192,21 @@ public class UsersAdminImpl implements UsersAdmin {
 	@Override
 	public List<Role> filterGroupRoles(
 			PermissionChecker permissionChecker, long groupId, List<Role> roles)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		List<Role> filteredGroupRoles = ListUtil.copy(roles);
 
-		Iterator<Role> itr = filteredGroupRoles.iterator();
+		Iterator<Role> iterator = filteredGroupRoles.iterator();
 
-		while (itr.hasNext()) {
-			Role groupRole = itr.next();
+		while (iterator.hasNext()) {
+			Role groupRole = iterator.next();
 
 			String roleName = groupRole.getName();
 
 			if (roleName.equals(RoleConstants.ORGANIZATION_USER) ||
 				roleName.equals(RoleConstants.SITE_MEMBER)) {
 
-				itr.remove();
+				iterator.remove();
 			}
 		}
 
@@ -214,44 +216,33 @@ public class UsersAdminImpl implements UsersAdmin {
 			return filteredGroupRoles;
 		}
 
-		itr = filteredGroupRoles.iterator();
-
-		while (itr.hasNext()) {
-			Role groupRole = itr.next();
-
-			String roleName = groupRole.getName();
-
-			if (roleName.equals(
-					RoleConstants.ORGANIZATION_ADMINISTRATOR) ||
-				roleName.equals(RoleConstants.ORGANIZATION_OWNER) ||
-				roleName.equals(RoleConstants.SITE_ADMINISTRATOR) ||
-				roleName.equals(RoleConstants.SITE_OWNER)) {
-
-				itr.remove();
-			}
-		}
-
 		Group group = GroupLocalServiceUtil.getGroup(groupId);
 
-		if (GroupPermissionUtil.contains(
-				permissionChecker, group, ActionKeys.ASSIGN_USER_ROLES) ||
-			OrganizationPermissionUtil.contains(
+		if (!GroupPermissionUtil.contains(
+				permissionChecker, group, ActionKeys.ASSIGN_USER_ROLES) &&
+			!OrganizationPermissionUtil.contains(
 				permissionChecker, group.getOrganizationId(),
 				ActionKeys.ASSIGN_USER_ROLES)) {
 
-			return filteredGroupRoles;
+			return Collections.emptyList();
 		}
 
-		itr = filteredGroupRoles.iterator();
+		iterator = filteredGroupRoles.iterator();
 
-		while (itr.hasNext()) {
-			Role role = itr.next();
+		while (iterator.hasNext()) {
+			Role groupRole = iterator.next();
 
-			if (!RolePermissionUtil.contains(
-					permissionChecker, groupId, role.getRoleId(),
+			String roleName = groupRole.getName();
+
+			if (roleName.equals(RoleConstants.ORGANIZATION_ADMINISTRATOR) ||
+				roleName.equals(RoleConstants.ORGANIZATION_OWNER) ||
+				roleName.equals(RoleConstants.SITE_ADMINISTRATOR) ||
+				roleName.equals(RoleConstants.SITE_OWNER) ||
+				!RolePermissionUtil.contains(
+					permissionChecker, groupId, groupRole.getRoleId(),
 					ActionKeys.ASSIGN_MEMBERS)) {
 
-				itr.remove();
+				iterator.remove();
 			}
 		}
 
@@ -261,7 +252,7 @@ public class UsersAdminImpl implements UsersAdmin {
 	@Override
 	public List<Group> filterGroups(
 			PermissionChecker permissionChecker, List<Group> groups)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		if (permissionChecker.isCompanyAdmin()) {
 			return groups;
@@ -269,15 +260,15 @@ public class UsersAdminImpl implements UsersAdmin {
 
 		List<Group> filteredGroups = ListUtil.copy(groups);
 
-		Iterator<Group> itr = filteredGroups.iterator();
+		Iterator<Group> iterator = filteredGroups.iterator();
 
-		while (itr.hasNext()) {
-			Group group = itr.next();
+		while (iterator.hasNext()) {
+			Group group = iterator.next();
 
 			if (!GroupPermissionUtil.contains(
 					permissionChecker, group, ActionKeys.ASSIGN_MEMBERS)) {
 
-				itr.remove();
+				iterator.remove();
 			}
 		}
 
@@ -288,7 +279,7 @@ public class UsersAdminImpl implements UsersAdmin {
 	public List<Organization> filterOrganizations(
 			PermissionChecker permissionChecker,
 			List<Organization> organizations)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		if (permissionChecker.isCompanyAdmin()) {
 			return organizations;
@@ -296,16 +287,16 @@ public class UsersAdminImpl implements UsersAdmin {
 
 		List<Organization> filteredOrganizations = ListUtil.copy(organizations);
 
-		Iterator<Organization> itr = filteredOrganizations.iterator();
+		Iterator<Organization> iterator = filteredOrganizations.iterator();
 
-		while (itr.hasNext()) {
-			Organization organization = itr.next();
+		while (iterator.hasNext()) {
+			Organization organization = iterator.next();
 
 			if (!OrganizationPermissionUtil.contains(
-					permissionChecker, organization.getOrganizationId(),
+					permissionChecker, organization,
 					ActionKeys.ASSIGN_MEMBERS)) {
 
-				itr.remove();
+				iterator.remove();
 			}
 		}
 
@@ -318,10 +309,10 @@ public class UsersAdminImpl implements UsersAdmin {
 
 		List<Role> filteredRoles = ListUtil.copy(roles);
 
-		Iterator<Role> itr = filteredRoles.iterator();
+		Iterator<Role> iterator = filteredRoles.iterator();
 
-		while (itr.hasNext()) {
-			Role role = itr.next();
+		while (iterator.hasNext()) {
+			Role role = iterator.next();
 
 			String roleName = role.getName();
 
@@ -331,7 +322,7 @@ public class UsersAdminImpl implements UsersAdmin {
 				roleName.equals(RoleConstants.SITE_MEMBER) ||
 				roleName.equals(RoleConstants.USER)) {
 
-				itr.remove();
+				iterator.remove();
 			}
 		}
 
@@ -339,16 +330,16 @@ public class UsersAdminImpl implements UsersAdmin {
 			return filteredRoles;
 		}
 
-		itr = filteredRoles.iterator();
+		iterator = filteredRoles.iterator();
 
-		while (itr.hasNext()) {
-			Role role = itr.next();
+		while (iterator.hasNext()) {
+			Role role = iterator.next();
 
 			if (!RolePermissionUtil.contains(
 					permissionChecker, role.getRoleId(),
 					ActionKeys.ASSIGN_MEMBERS)) {
 
-				itr.remove();
+				iterator.remove();
 			}
 		}
 
@@ -358,7 +349,7 @@ public class UsersAdminImpl implements UsersAdmin {
 	@Override
 	public long[] filterUnsetGroupUserIds(
 			PermissionChecker permissionChecker, long groupId, long[] userIds)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		long[] filteredUserIds = userIds;
 
@@ -377,7 +368,7 @@ public class UsersAdminImpl implements UsersAdmin {
 	public long[] filterUnsetOrganizationUserIds(
 			PermissionChecker permissionChecker, long organizationId,
 			long[] userIds)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		long[] filteredUserIds = userIds;
 
@@ -396,15 +387,15 @@ public class UsersAdminImpl implements UsersAdmin {
 	public List<UserGroupRole> filterUserGroupRoles(
 			PermissionChecker permissionChecker,
 			List<UserGroupRole> userGroupRoles)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		List<UserGroupRole> filteredUserGroupRoles = ListUtil.copy(
 			userGroupRoles);
 
-		Iterator<UserGroupRole> itr = filteredUserGroupRoles.iterator();
+		Iterator<UserGroupRole> iterator = filteredUserGroupRoles.iterator();
 
-		while (itr.hasNext()) {
-			UserGroupRole userGroupRole = itr.next();
+		while (iterator.hasNext()) {
+			UserGroupRole userGroupRole = iterator.next();
 
 			Role role = userGroupRole.getRole();
 
@@ -413,7 +404,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			if (roleName.equals(RoleConstants.ORGANIZATION_USER) ||
 				roleName.equals(RoleConstants.SITE_MEMBER)) {
 
-				itr.remove();
+				iterator.remove();
 			}
 		}
 
@@ -421,16 +412,16 @@ public class UsersAdminImpl implements UsersAdmin {
 			return filteredUserGroupRoles;
 		}
 
-		itr = filteredUserGroupRoles.iterator();
+		iterator = filteredUserGroupRoles.iterator();
 
-		while (itr.hasNext()) {
-			UserGroupRole userGroupRole = itr.next();
+		while (iterator.hasNext()) {
+			UserGroupRole userGroupRole = iterator.next();
 
 			if (!UserGroupRolePermissionUtil.contains(
 					permissionChecker, userGroupRole.getGroupId(),
 					userGroupRole.getRoleId())) {
 
-				itr.remove();
+				iterator.remove();
 			}
 		}
 
@@ -447,16 +438,16 @@ public class UsersAdminImpl implements UsersAdmin {
 
 		List<UserGroup> filteredUserGroups = ListUtil.copy(userGroups);
 
-		Iterator<UserGroup> itr = filteredUserGroups.iterator();
+		Iterator<UserGroup> iterator = filteredUserGroups.iterator();
 
-		while (itr.hasNext()) {
-			UserGroup userGroup = itr.next();
+		while (iterator.hasNext()) {
+			UserGroup userGroup = iterator.next();
 
 			if (!UserGroupPermissionUtil.contains(
 					permissionChecker, userGroup.getUserGroupId(),
 					ActionKeys.ASSIGN_MEMBERS)) {
 
-				itr.remove();
+				iterator.remove();
 			}
 		}
 
@@ -479,7 +470,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			return defaultAddresses;
 		}
 
-		List<Address> addresses = new ArrayList<Address>();
+		List<Address> addresses = new ArrayList<>();
 
 		int[] addressesIndexes = StringUtil.split(addressesIndexesString, 0);
 
@@ -512,7 +503,7 @@ public class UsersAdminImpl implements UsersAdmin {
 
 			long regionId = ParamUtil.getLong(
 				actionRequest, "addressRegionId" + addressesIndex);
-			int typeId = ParamUtil.getInteger(
+			long typeId = ParamUtil.getLong(
 				actionRequest, "addressTypeId" + addressesIndex);
 			boolean mailing = ParamUtil.getBoolean(
 				actionRequest, "addressMailing" + addressesIndex);
@@ -559,7 +550,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			return defaultEmailAddresses;
 		}
 
-		List<EmailAddress> emailAddresses = new ArrayList<EmailAddress>();
+		List<EmailAddress> emailAddresses = new ArrayList<>();
 
 		int[] emailAddressesIndexes = StringUtil.split(
 			emailAddressesIndexesString, 0);
@@ -578,7 +569,7 @@ public class UsersAdminImpl implements UsersAdmin {
 				continue;
 			}
 
-			int typeId = ParamUtil.getInteger(
+			long typeId = ParamUtil.getLong(
 				actionRequest, "emailAddressTypeId" + emailAddressesIndex);
 
 			boolean primary = false;
@@ -601,7 +592,23 @@ public class UsersAdminImpl implements UsersAdmin {
 	}
 
 	@Override
-	public OrderByComparator getGroupOrderByComparator(
+	public long[] getGroupIds(PortletRequest portletRequest)
+		throws PortalException {
+
+		long[] groupIds = new long[0];
+
+		User user = PortalUtil.getSelectedUser(portletRequest);
+
+		if (user != null) {
+			groupIds = user.getGroupIds();
+		}
+
+		return getRequestPrimaryKeys(
+			portletRequest, groupIds, "addGroupIds", "deleteGroupIds");
+	}
+
+	@Override
+	public OrderByComparator<Group> getGroupOrderByComparator(
 		String orderByCol, String orderByType) {
 
 		boolean orderByAsc = false;
@@ -610,7 +617,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			orderByAsc = true;
 		}
 
-		OrderByComparator orderByComparator = null;
+		OrderByComparator<Group> orderByComparator = null;
 
 		if (orderByCol.equals("name")) {
 			orderByComparator = new GroupNameComparator(orderByAsc);
@@ -636,14 +643,31 @@ public class UsersAdminImpl implements UsersAdmin {
 		for (int i = 0; i < organizations.size(); i++) {
 			Organization organization = organizations.get(i);
 
-			organizationIds[i] = new Long(organization.getOrganizationId());
+			organizationIds[i] = Long.valueOf(organization.getOrganizationId());
 		}
 
 		return organizationIds;
 	}
 
 	@Override
-	public OrderByComparator getOrganizationOrderByComparator(
+	public long[] getOrganizationIds(PortletRequest portletRequest)
+		throws PortalException {
+
+		long[] organizationIds = new long[0];
+
+		User user = PortalUtil.getSelectedUser(portletRequest);
+
+		if (user != null) {
+			organizationIds = user.getOrganizationIds();
+		}
+
+		return getRequestPrimaryKeys(
+			portletRequest, organizationIds, "addOrganizationIds",
+			"deleteOrganizationIds");
+	}
+
+	@Override
+	public OrderByComparator<Organization> getOrganizationOrderByComparator(
 		String orderByCol, String orderByType) {
 
 		boolean orderByAsc = false;
@@ -652,7 +676,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			orderByAsc = true;
 		}
 
-		OrderByComparator orderByComparator = null;
+		OrderByComparator<Organization> orderByComparator = null;
 
 		if (orderByCol.equals("name")) {
 			orderByComparator = new OrganizationNameComparator(orderByAsc);
@@ -668,29 +692,24 @@ public class UsersAdminImpl implements UsersAdmin {
 	}
 
 	@Override
-	public Tuple getOrganizations(Hits hits)
-		throws PortalException, SystemException {
-
-		List<Organization> organizations = new ArrayList<Organization>();
-		boolean corruptIndex = false;
+	public List<Organization> getOrganizations(Hits hits)
+		throws PortalException {
 
 		List<Document> documents = hits.toList();
+
+		List<Organization> organizations = new ArrayList<>(documents.size());
 
 		for (Document document : documents) {
 			long organizationId = GetterUtil.getLong(
 				document.get(Field.ORGANIZATION_ID));
 
-			try {
-				Organization organization =
-					OrganizationLocalServiceUtil.getOrganization(
-						organizationId);
+			Organization organization =
+				OrganizationLocalServiceUtil.fetchOrganization(organizationId);
 
-				organizations.add(organization);
-			}
-			catch (NoSuchOrganizationException nsoe) {
-				corruptIndex = true;
+			if (organization == null) {
+				organizations = null;
 
-				Indexer indexer = IndexerRegistryUtil.getIndexer(
+				Indexer<Organization> indexer = IndexerRegistryUtil.getIndexer(
 					Organization.class);
 
 				long companyId = GetterUtil.getLong(
@@ -698,14 +717,17 @@ public class UsersAdminImpl implements UsersAdmin {
 
 				indexer.delete(companyId, document.getUID());
 			}
+			else if (organizations != null) {
+				organizations.add(organization);
+			}
 		}
 
-		return new Tuple(organizations, corruptIndex);
+		return organizations;
 	}
 
 	@Override
 	public List<OrgLabor> getOrgLabors(ActionRequest actionRequest) {
-		List<OrgLabor> orgLabors = new ArrayList<OrgLabor>();
+		List<OrgLabor> orgLabors = new ArrayList<>();
 
 		int[] orgLaborsIndexes = StringUtil.split(
 			ParamUtil.getString(actionRequest, "orgLaborsIndexes"), 0);
@@ -714,7 +736,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			long orgLaborId = ParamUtil.getLong(
 				actionRequest, "orgLaborId" + orgLaborsIndex);
 
-			int typeId = ParamUtil.getInteger(
+			long typeId = ParamUtil.getLong(
 				actionRequest, "orgLaborTypeId" + orgLaborsIndex, -1);
 
 			if (typeId == -1) {
@@ -791,7 +813,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			return defaultPhones;
 		}
 
-		List<Phone> phones = new ArrayList<Phone>();
+		List<Phone> phones = new ArrayList<>();
 
 		int[] phonesIndexes = StringUtil.split(phonesIndexesString, 0);
 
@@ -810,7 +832,7 @@ public class UsersAdminImpl implements UsersAdmin {
 				continue;
 			}
 
-			int typeId = ParamUtil.getInteger(
+			long typeId = ParamUtil.getLong(
 				actionRequest, "phoneTypeId" + phonesIndex);
 
 			boolean primary = false;
@@ -833,7 +855,23 @@ public class UsersAdminImpl implements UsersAdmin {
 	}
 
 	@Override
-	public OrderByComparator getRoleOrderByComparator(
+	public long[] getRoleIds(PortletRequest portletRequest)
+		throws PortalException {
+
+		long[] roleIds = new long[0];
+
+		User user = PortalUtil.getSelectedUser(portletRequest);
+
+		if (user != null) {
+			roleIds = user.getRoleIds();
+		}
+
+		return getRequestPrimaryKeys(
+			portletRequest, roleIds, "addRoleIds", "deleteRoleIds");
+	}
+
+	@Override
+	public OrderByComparator<Role> getRoleOrderByComparator(
 		String orderByCol, String orderByType) {
 
 		boolean orderByAsc = false;
@@ -842,7 +880,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			orderByAsc = true;
 		}
 
-		OrderByComparator orderByComparator = null;
+		OrderByComparator<Role> orderByComparator = null;
 
 		if (orderByCol.equals("name")) {
 			orderByComparator = new RoleNameComparator(orderByAsc);
@@ -861,7 +899,43 @@ public class UsersAdminImpl implements UsersAdmin {
 	}
 
 	@Override
-	public OrderByComparator getUserGroupOrderByComparator(
+	public <T> String getUserColumnText(
+		Locale locale, List<? extends T> list, Accessor<T, String> accessor,
+		int count) {
+
+		String result = ListUtil.toString(
+			list, accessor, StringPool.COMMA_AND_SPACE);
+
+		if (list.size() < count) {
+			String message = LanguageUtil.format(
+				locale, "and-x-more", String.valueOf(count - list.size()),
+				false);
+
+			result += StringPool.SPACE + message;
+		}
+
+		return result;
+	}
+
+	@Override
+	public long[] getUserGroupIds(PortletRequest portletRequest)
+		throws PortalException {
+
+		long[] userGroupIds = new long[0];
+
+		User user = PortalUtil.getSelectedUser(portletRequest);
+
+		if (user != null) {
+			userGroupIds = user.getUserGroupIds();
+		}
+
+		return getRequestPrimaryKeys(
+			portletRequest, userGroupIds, "addUserGroupIds",
+			"deleteUserGroupIds");
+	}
+
+	@Override
+	public OrderByComparator<UserGroup> getUserGroupOrderByComparator(
 		String orderByCol, String orderByType) {
 
 		boolean orderByAsc = false;
@@ -870,7 +944,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			orderByAsc = true;
 		}
 
-		OrderByComparator orderByComparator = null;
+		OrderByComparator<UserGroup> orderByComparator = null;
 
 		if (orderByCol.equals("name")) {
 			orderByComparator = new UserGroupNameComparator(orderByAsc);
@@ -887,68 +961,46 @@ public class UsersAdminImpl implements UsersAdmin {
 
 	@Override
 	public List<UserGroupRole> getUserGroupRoles(PortletRequest portletRequest)
-		throws PortalException, SystemException {
-
-		List<UserGroupRole> userGroupRoles = new UniqueList<UserGroupRole>();
-
-		long[] groupRolesRoleIds = StringUtil.split(
-			ParamUtil.getString(portletRequest, "groupRolesRoleIds"), 0L);
-		long[] groupRolesGroupIds = StringUtil.split(
-			ParamUtil.getString(portletRequest, "groupRolesGroupIds"), 0L);
-
-		if (groupRolesGroupIds.length != groupRolesRoleIds.length) {
-			return userGroupRoles;
-		}
+		throws PortalException {
 
 		User user = PortalUtil.getSelectedUser(portletRequest);
 
-		long userId = 0;
-
-		if (user != null) {
-			userId = user.getUserId();
+		if (user == null) {
+			return Collections.emptyList();
 		}
 
-		for (int i = 0; i < groupRolesGroupIds.length; i++) {
-			if ((groupRolesGroupIds[i] == 0) || (groupRolesRoleIds[i] == 0)) {
-				continue;
-			}
+		Set<UserGroupRole> userGroupRoles = new HashSet<>(
+			UserGroupRoleLocalServiceUtil.getUserGroupRoles(user.getUserId()));
 
-			UserGroupRolePK userGroupRolePK = new UserGroupRolePK(
-				userId, groupRolesGroupIds[i], groupRolesRoleIds[i]);
+		userGroupRoles.addAll(
+			getUserGroupRoles(
+				portletRequest, user, "addGroupRolesGroupIds",
+				"addGroupRolesRoleIds"));
+		userGroupRoles.removeAll(
+			getUserGroupRoles(
+				portletRequest, user, "deleteGroupRolesGroupIds",
+				"deleteGroupRolesRoleIds"));
 
-			UserGroupRole userGroupRole =
-				UserGroupRoleLocalServiceUtil.createUserGroupRole(
-					userGroupRolePK);
-
-			userGroupRoles.add(userGroupRole);
-		}
-
-		return userGroupRoles;
+		return new ArrayList<>(userGroupRoles);
 	}
 
 	@Override
-	public Tuple getUserGroups(Hits hits)
-		throws PortalException, SystemException {
-
-		List<UserGroup> userGroups = new ArrayList<UserGroup>();
-		boolean corruptIndex = false;
-
+	public List<UserGroup> getUserGroups(Hits hits) throws PortalException {
 		List<Document> documents = hits.toList();
+
+		List<UserGroup> userGroups = new ArrayList<>(documents.size());
 
 		for (Document document : documents) {
 			long userGroupId = GetterUtil.getLong(
 				document.get(Field.USER_GROUP_ID));
 
-			try {
-				UserGroup userGroup = UserGroupLocalServiceUtil.getUserGroup(
-					userGroupId);
+			UserGroup userGroup = UserGroupLocalServiceUtil.fetchUserGroup(
+				userGroupId);
 
-				userGroups.add(userGroup);
-			}
-			catch (NoSuchUserGroupException nsuge) {
-				corruptIndex = true;
+			if (userGroup == null) {
+				userGroups = null;
 
-				Indexer indexer = IndexerRegistryUtil.getIndexer(
+				Indexer<UserGroup> indexer = IndexerRegistryUtil.getIndexer(
 					UserGroup.class);
 
 				long companyId = GetterUtil.getLong(
@@ -956,13 +1008,16 @@ public class UsersAdminImpl implements UsersAdmin {
 
 				indexer.delete(companyId, document.getUID());
 			}
+			else if (userGroups != null) {
+				userGroups.add(userGroup);
+			}
 		}
 
-		return new Tuple(userGroups, corruptIndex);
+		return userGroups;
 	}
 
 	@Override
-	public OrderByComparator getUserOrderByComparator(
+	public OrderByComparator<User> getUserOrderByComparator(
 		String orderByCol, String orderByType) {
 
 		boolean orderByAsc = false;
@@ -971,7 +1026,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			orderByAsc = true;
 		}
 
-		OrderByComparator orderByComparator = null;
+		OrderByComparator<User> orderByComparator = null;
 
 		if (orderByCol.equals("email-address")) {
 			orderByComparator = new UserEmailAddressComparator(orderByAsc);
@@ -996,33 +1051,33 @@ public class UsersAdminImpl implements UsersAdmin {
 	}
 
 	@Override
-	public Tuple getUsers(Hits hits) throws PortalException, SystemException {
-		List<User> users = new ArrayList<User>();
-		boolean corruptIndex = false;
-
+	public List<User> getUsers(Hits hits) throws PortalException {
 		List<Document> documents = hits.toList();
+
+		List<User> users = new ArrayList<>(documents.size());
 
 		for (Document document : documents) {
 			long userId = GetterUtil.getLong(document.get(Field.USER_ID));
 
 			User user = UserLocalServiceUtil.fetchUser(userId);
 
-			if (user != null) {
-				users.add(user);
-			}
-			else {
-				corruptIndex = true;
+			if (user == null) {
+				users = null;
 
-				Indexer indexer = IndexerRegistryUtil.getIndexer(User.class);
+				Indexer<User> indexer = IndexerRegistryUtil.getIndexer(
+					User.class);
 
 				long companyId = GetterUtil.getLong(
 					document.get(Field.COMPANY_ID));
 
 				indexer.delete(companyId, document.getUID());
 			}
+			else if (users != null) {
+				users.add(user);
+			}
 		}
 
-		return new Tuple(users, corruptIndex);
+		return users;
 	}
 
 	@Override
@@ -1041,7 +1096,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			return defaultWebsites;
 		}
 
-		List<Website> websites = new ArrayList<Website>();
+		List<Website> websites = new ArrayList<>();
 
 		int[] websitesIndexes = StringUtil.split(websitesIndexesString, 0);
 
@@ -1059,7 +1114,7 @@ public class UsersAdminImpl implements UsersAdmin {
 				continue;
 			}
 
-			int typeId = ParamUtil.getInteger(
+			long typeId = ParamUtil.getLong(
 				actionRequest, "websiteTypeId" + websitesIndex);
 
 			boolean primary = false;
@@ -1080,49 +1135,58 @@ public class UsersAdminImpl implements UsersAdmin {
 		return websites;
 	}
 
-	/**
-	 * @deprecated As of 6.2.0, replaced by {@link
-	 *             #hasUpdateFieldPermission(User, String)}
-	 */
 	@Override
-	public boolean hasUpdateEmailAddress(
-			PermissionChecker permissionChecker, User user)
-		throws PortalException, SystemException {
+	public boolean hasUpdateFieldPermission(
+			PermissionChecker permissionChecker, User updatingUser,
+			User updatedUser, String field)
+		throws PortalException {
 
-		return hasUpdateFieldPermission(user, "emailAddress");
-	}
+		if (updatedUser == null) {
+			return true;
+		}
 
-	@Override
-	public boolean hasUpdateFieldPermission(User user, String field)
-		throws PortalException, SystemException {
+		if (updatingUser == null) {
+			long updatingUserId = PrincipalThreadLocal.getUserId();
 
-		if (user == null) {
+			if (updatingUserId > 0) {
+				updatingUser = UserLocalServiceUtil.fetchUserById(
+					updatingUserId);
+			}
+		}
+
+		if ((updatingUser != null) && !updatingUser.equals(updatedUser) &&
+			UserPermissionUtil.contains(
+				permissionChecker, updatingUser.getUserId(),
+				ActionKeys.UPDATE_USER)) {
+
 			return true;
 		}
 
 		for (String userType : PropsValues.FIELD_EDITABLE_USER_TYPES) {
-			if (userType.equals("user-with-mx") && user.hasCompanyMx()) {
+			if (userType.equals("user-with-mx") && updatedUser.hasCompanyMx()) {
 				return true;
 			}
 
-			if (userType.equals("user-without-mx") && !user.hasCompanyMx()) {
+			if (userType.equals("user-without-mx") &&
+				!updatedUser.hasCompanyMx()) {
+
 				return true;
 			}
 		}
 
 		for (String roleName : PropsValues.FIELD_EDITABLE_ROLES) {
 			Role role = RoleLocalServiceUtil.fetchRole(
-				user.getCompanyId(), roleName);
+				updatedUser.getCompanyId(), roleName);
 
 			if ((role != null) &&
 				RoleLocalServiceUtil.hasUserRole(
-					user.getUserId(), role.getRoleId())) {
+					updatedUser.getUserId(), role.getRoleId())) {
 
 				return true;
 			}
 		}
 
-		String emailAddress = user.getEmailAddress();
+		String emailAddress = updatedUser.getEmailAddress();
 
 		for (String domainName : PropsValues.FIELD_EDITABLE_DOMAINS) {
 			if (emailAddress.endsWith(domainName)) {
@@ -1134,7 +1198,9 @@ public class UsersAdminImpl implements UsersAdmin {
 			PropsKeys.FIELD_EDITABLE_DOMAINS, new Filter(field));
 
 		for (String domainName : fieldEditableDomainNames) {
-			if (emailAddress.endsWith(domainName)) {
+			if (domainName.equals(StringPool.STAR) ||
+				emailAddress.endsWith(domainName)) {
+
 				return true;
 			}
 		}
@@ -1142,45 +1208,30 @@ public class UsersAdminImpl implements UsersAdmin {
 		return false;
 	}
 
-	/**
-	 * @deprecated As of 6.2.0, replaced by {@link
-	 *             #hasUpdateFieldPermission(User, String)}
-	 */
-	@Override
-	public boolean hasUpdateScreenName(
-			PermissionChecker permissionChecker, User user)
-		throws PortalException, SystemException {
-
-		return hasUpdateFieldPermission(user, "screenName");
-	}
-
 	@Override
 	public long[] removeRequiredRoles(long userId, long[] roleIds)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		User user = UserLocalServiceUtil.getUser(userId);
-
-		return removeRequiredRoles(user, roleIds);
+		return removeRequiredRoles(
+			UserLocalServiceUtil.getUser(userId), roleIds);
 	}
 
 	@Override
 	public long[] removeRequiredRoles(User user, long[] roleIds)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		Role role = RoleLocalServiceUtil.getRole(
 			user.getCompanyId(), RoleConstants.USER);
 
-		roleIds = ArrayUtil.remove(roleIds, role.getRoleId());
-
-		return roleIds;
+		return ArrayUtil.remove(roleIds, role.getRoleId());
 	}
 
 	@Override
 	public void updateAddresses(
 			String className, long classPK, List<Address> addresses)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		Set<Long> addressIds = new HashSet<Long>();
+		Set<Long> addressIds = new HashSet<>();
 
 		for (Address address : addresses) {
 			long addressId = address.getAddressId();
@@ -1192,7 +1243,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			String zip = address.getZip();
 			long regionId = address.getRegionId();
 			long countryId = address.getCountryId();
-			int typeId = address.getTypeId();
+			long typeId = address.getTypeId();
 			boolean mailing = address.isMailing();
 			boolean primary = address.isPrimary();
 
@@ -1225,15 +1276,15 @@ public class UsersAdminImpl implements UsersAdmin {
 	@Override
 	public void updateEmailAddresses(
 			String className, long classPK, List<EmailAddress> emailAddresses)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		Set<Long> emailAddressIds = new HashSet<Long>();
+		Set<Long> emailAddressIds = new HashSet<>();
 
 		for (EmailAddress emailAddress : emailAddresses) {
 			long emailAddressId = emailAddress.getEmailAddressId();
 
 			String address = emailAddress.getAddress();
-			int typeId = emailAddress.getTypeId();
+			long typeId = emailAddress.getTypeId();
 			boolean primary = emailAddress.isPrimary();
 
 			if (emailAddressId <= 0) {
@@ -1264,14 +1315,14 @@ public class UsersAdminImpl implements UsersAdmin {
 
 	@Override
 	public void updateOrgLabors(long classPK, List<OrgLabor> orgLabors)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		Set<Long> orgLaborsIds = new HashSet<Long>();
+		Set<Long> orgLaborsIds = new HashSet<>();
 
 		for (OrgLabor orgLabor : orgLabors) {
 			long orgLaborId = orgLabor.getOrgLaborId();
 
-			int typeId = orgLabor.getTypeId();
+			long typeId = orgLabor.getTypeId();
 			int sunOpen = orgLabor.getSunOpen();
 			int sunClose = orgLabor.getSunClose();
 			int monOpen = orgLabor.getMonOpen();
@@ -1316,16 +1367,16 @@ public class UsersAdminImpl implements UsersAdmin {
 
 	@Override
 	public void updatePhones(String className, long classPK, List<Phone> phones)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		Set<Long> phoneIds = new HashSet<Long>();
+		Set<Long> phoneIds = new HashSet<>();
 
 		for (Phone phone : phones) {
 			long phoneId = phone.getPhoneId();
 
 			String number = phone.getNumber();
 			String extension = phone.getExtension();
-			int typeId = phone.getTypeId();
+			long typeId = phone.getTypeId();
 			boolean primary = phone.isPrimary();
 
 			if (phoneId <= 0) {
@@ -1355,15 +1406,15 @@ public class UsersAdminImpl implements UsersAdmin {
 	@Override
 	public void updateWebsites(
 			String className, long classPK, List<Website> websites)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		Set<Long> websiteIds = new HashSet<Long>();
+		Set<Long> websiteIds = new HashSet<>();
 
 		for (Website website : websites) {
 			long websiteId = website.getWebsiteId();
 
 			String url = website.getUrl();
-			int typeId = website.getTypeId();
+			long typeId = website.getTypeId();
 			boolean primary = website.isPrimary();
 
 			if (websiteId <= 0) {
@@ -1388,6 +1439,67 @@ public class UsersAdminImpl implements UsersAdmin {
 				WebsiteServiceUtil.deleteWebsite(website.getWebsiteId());
 			}
 		}
+	}
+
+	protected long[] getRequestPrimaryKeys(
+		PortletRequest portletRequest, long[] currentPKs, String addParam,
+		String deleteParam) {
+
+		Set<Long> primaryKeys = SetUtil.fromArray(currentPKs);
+
+		long[] addPrimaryKeys = StringUtil.split(
+			ParamUtil.getString(portletRequest, addParam), 0L);
+		long[] deletePrimaryKeys = StringUtil.split(
+			ParamUtil.getString(portletRequest, deleteParam), 0L);
+
+		for (long addPrimaryKey : addPrimaryKeys) {
+			primaryKeys.add(addPrimaryKey);
+		}
+
+		for (long deletePrimaryKey : deletePrimaryKeys) {
+			primaryKeys.remove(deletePrimaryKey);
+		}
+
+		return ArrayUtil.toLongArray(primaryKeys);
+	}
+
+	protected Set<UserGroupRole> getUserGroupRoles(
+		PortletRequest portletRequest, User user, String groupIdsParam,
+		String roleIdsParam) {
+
+		Set<UserGroupRole> userGroupRoles = new HashSet<>();
+
+		long[] groupRolesGroupIds = StringUtil.split(
+			ParamUtil.getString(portletRequest, groupIdsParam), 0L);
+		long[] groupRolesRoleIds = StringUtil.split(
+			ParamUtil.getString(portletRequest, roleIdsParam), 0L);
+
+		if (groupRolesGroupIds.length != groupRolesRoleIds.length) {
+			return userGroupRoles;
+		}
+
+		long userId = 0;
+
+		if (user != null) {
+			userId = user.getUserId();
+		}
+
+		for (int i = 0; i < groupRolesGroupIds.length; i++) {
+			if ((groupRolesGroupIds[i] == 0) || (groupRolesRoleIds[i] == 0)) {
+				continue;
+			}
+
+			UserGroupRole userGroupRole =
+				UserGroupRoleLocalServiceUtil.createUserGroupRole(0);
+
+			userGroupRole.setUserId(userId);
+			userGroupRole.setGroupId(groupRolesGroupIds[i]);
+			userGroupRole.setRoleId(groupRolesRoleIds[i]);
+
+			userGroupRoles.add(userGroupRole);
+		}
+
+		return userGroupRoles;
 	}
 
 }
